Responding to Smaller Tablets

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo" />
       </a>
@@ -607,6 +607,7 @@
 
           <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
         </div>
+
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
           <address class="contacts">
@@ -617,6 +618,7 @@
             </p>
           </address>
         </div>
+
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
@@ -626,6 +628,7 @@
             <li><a class="footer-link" href="#">Android app</a></li>
           </ul>
         </nav>
+        
         <nav class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
@@ -635,6 +638,7 @@
             <li><a class="footer-link" href="#">Careers</a></li>
           </ul>
         </nav>
+
         <nav class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
