--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
     ></script>
 
+    <script defer src="js/script.js"></script>
+
     <title>Omnifood</title>
   </head>
   <body>
@@ -606,7 +608,7 @@
             <li><a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a></li>
           </ul>
 
-          <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
+          <p class="copyright">Copyright &copy; <span class="year">2027</span> by Omnifood, Inc. All rights reserved.</p>
         </div>
 
         <div class="address-col">
